# darkpawns

./: .gitignore  Makefile.in  README.md  configure  configure.ac  start_dp.sh
doc/.svn/: entries
src/: Makefile  Makefile.am  Makefile.in  act.comm.c  act.display.c  act.informative.c  act.item.c  act.movement.c  act.offensive.c  act.other.c  act.social.c  act.wizard.c  alias.c  ban.c  boards.c  boards.h  build.count.h  changelog  circle.c  clan.c  clan.h  class.c  comm.c  comm.h  config.c  config.h  config.h.in  constants.c  constants.h  copyright_notice  db.c  db.h  dream.c  dream.h  fight.c  file-edit.c  file-edit.h  gate.c  graph.c  handler.c  (+61 more)
src/.deps/: act.comm.Po  act.display.Po  act.informative.Po  act.item.Po  act.movement.Po  act.offensive.Po  act.other.Po  act.social.Po  act.wizard.Po  alias.Po  ban.Po  boards.Po  circle.Po  clan.Po  class.Po  comm.Po  config.Po  constants.Po  db.Po  dream.Po  events.Po  fight.Po  file-edit.Po  gate.Po  graph.Po  handler.Po  house.Po  ident.Po  improved-edit.Po  interpreter.Po  limits.Po  luaedit.Po  magic.Po  mail.Po  mapcode.Po  medit.Po  mobact.Po  mobprog.Po  modify.Po  new_cmds.Po  (+25 more)
src/.svn/: dir-prop-base  entries
src/.svn/text-base/: .cvsignore.svn-base  Makefile.in.svn-base  act.comm.c.svn-base  act.display.c.svn-base  act.informative.c.svn-base  act.item.c.svn-base  act.movement.c.svn-base  act.offensive.c.svn-base  act.other.c.svn-base  act.social.c.svn-base  act.wizard.c.svn-base  alias.c.svn-base  ban.c.svn-base  boards.c.svn-base  boards.h.svn-base  circle.dep.svn-base  clan.c.svn-base  clan.h.svn-base  class.c.svn-base  comm.c.svn-base  comm.h.svn-base  config.c.svn-base  constants.c.svn-base  copyright_notice.svn-base  db.c.svn-base  db.h.svn-base  dream.c.svn-base  events.c.svn-base  events.h.svn-base  fight.c.svn-base  gate.c.svn-base  graph.c.svn-base  handler.c.svn-base  handler.h.svn-base  house.c.svn-base  house.h.svn-base  ident.c.svn-base  ident.h.svn-base  interpreter.c.svn-base  interpreter.h.svn-base  (+44 more)
src/lua/: GNUmakefile  config
src/lua/.svn/: entries
src/lua/.svn/text-base/: Makefile.svn-base
src/lua/doc/.svn/: entries
src/lua/etc/: bin2c.c  trace.c
src/lua/etc/.svn/: entries
src/lua/include/: lauxlib.h  lua.h  luadebug.h  lualib.h
src/lua/include/.svn/: entries
src/lua/lib/.svn/: dir-prop-base  entries
src/lua/src/: lapi.c  lcode.c  lcode.h  ldebug.c  ldo.c  lfunc.c  lgc.c  llex.c  llex.h  llimits.h  lmem.c  lmem.h  lobject.c  lobject.h  lopcodes.h  lparser.c  lstring.h  ltable.c  ltable.h  ltests.c  ltm.h  lundump.c  lundump.h  lvm.c  lzio.h
src/lua/src/.svn/: entries
src/lua/src/lib/: lauxlib.c  lbaselib.c  ldblib.c  liolib.c  lmathlib.c  lstrlib.c
src/lua/src/lua/: lua.c
src/lua/src/luac/: dump.c  luac.c  luac.h  print.c  stubs.c
src/lua/test/: luac.lnk
src/lua/test/.svn/: entries
src/utils/: converthcontrol.c  objsearch.c  passwd.c  purgeplay.c
src/utils/.svn/: entries
src/utils/.svn/text-base/: listplay.c.svn-base  objsearch.c.svn-base
(+520 files in other folders)
